# ipx

./: .github-workflows-ci.yml  Cargo.toml  PROJECT_LOG.md  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
docs/: development.mdx  docs.json  index.mdx  quickstart.mdx
docs/essentials/: navigation.mdx
docs/features/: actions.mdx  command-palette.mdx  event-log.mdx  inspector.mdx  interface-list.mdx
docs/get-started/: installation.mdx  quickstart.mdx
docs/product/: vision.mdx
docs/reference/: discovery.mdx  keybindings.mdx  tui.mdx
src/: actions.rs  app.rs  lib.rs  main.rs  network.rs  tui.rs
tests/: actions_tests.rs  app_tests.rs  network_tests.rs  tui_origin_tests.rs
website/: docs.json
