[package]
name = "ipx"
version = "0.1.0"
edition = "2021"
description = "Keyboard-first macOS network operations TUI"
license = "MIT"
repository = "https://github.com/tonyassistant/ipx"
homepage = "https://github.com/tonyassistant/ipx"
readme = "README.md"

[dependencies]
anyhow = "1"
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
